workshop_files/Demos/Module3/Ingress/yellow-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yellow-dep
  labels:
    app: ingress-demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ingress-yellow
  template:
    metadata:
      labels:
        app: ingress-yellow
        color: yellow
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
      - name: servicedemo
        image: scubakiz/servicedemo:1.0
        ports:
        - containerPort: 80
          protocol: TCP
        imagePullPolicy: Always
        volumeMounts:
          - name: podinfo
            mountPath: /etc/podinfo    

      volumes:
      - name: podinfo
        downwardAPI:
          items:
          - path: "labels"
            fieldRef:
              fieldPath: metadata.labels
          - path: "annotations"
            fieldRef:
              fieldPath: metadata.annotations
