workshop_files/Demos/Module3/Ingress/default-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: default-svc        
  labels:
    app: ingress-demo
spec:
  ports:
    - port: 8100
      targetPort: 80
      name: web
  selector:
    app: ingress-default
  type: ClusterIP
