workshop_files/Demos/Module3/Ingress/red-svc-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: red-svc
spec:
  ports:
    - port: 8100
      targetPort: 80
      name: web
  selector:
    app: ingress-red
  type: LoadBalancer
